# today

./: .gitignore  BENCHMARK_RESULTS.md  CONVERSION_SUMMARY.md  Cargo.toml  MARKDOWN_BEFORE_AFTER.md  MARKDOWN_RENDERING.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  README.md  RUST_CONVERSION.md  analyze_profile.py  profile.stats  profile_fast.py  profile_script.py  profile_today.py  pyproject.toml  today-tasks.md
.github/workflows/: pr.yml  publish.yml
example/: chores.md
src/: cli.rs  lib.rs  markdown.rs  parser.rs  task.rs
tests/: test_cli.py  test_output.py  test_parser.py  test_task.py
today/: cli.py  fast_args.py  output.py  parser.py  simple_output.py  start.py  task.py
today/scripts/: start.py  today.py
