[tool.poetry]
name = "todo-today-cli"
version = "0.0.0"
description = "A file-centric task management app"
authors = ["Vighnesh Iyer <vighnesh.iyer@gmail.com>"]
maintainers = ["Vighnesh Iyer <vighnesh.iyer@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vighneshiyer/today"
packages = [
    {include = "today"}
]

[tool.poetry.scripts]
today = "today.scripts.today:main"
start = "today.scripts.start:main"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.1"
pydantic = "^1.9.2"
#mistune = "3.0.0rc4"
#mistletoe = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.991"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=65.3"]
build-backend = "poetry.core.masonry.api"
