[project]
name = "todo-today-cli"
version = "0.0.0"
description = "A file-centric task management app"
authors = [
    {name = "Vighnesh Iyer", email = "vighnesh.iyer@gmail.com"}
]
maintainers = [
    {name = "Vighnesh Iyer", email = "vighnesh.iyer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7",
    "pydantic>=2.6.4",
    "more-itertools>=10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pyright>=1.1",
]

[project.scripts]
today = "today.scripts.today:main"
start = "today.scripts.start:main"

[project.urls]
Repository = "https://github.com/vighneshiyer/today"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["today"]
